# research-leakproof

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
assets/: render_demo_svg.py
examples/: check_my_experiment.py
leakproof/: __init__.py  _stats.py  cli.py  demo.py  report.py  suppress.py
leakproof/checks/: __init__.py  effective_n.py  metric_honesty.py  shape_collapse.py  split_leakage.py
leakproof/scanner/: __init__.py  ast_scan.py
research_leakproof/: __init__.py  audit.py  cli.py  demo.py  finding.py  report.py
research_leakproof/checks/: group_leakage.py  multiple_comparisons.py  power.py  temporal_leakage.py
skills/audit/: SKILL.md
skills/scan/: SKILL.md
skills/verify/: SKILL.md
tests/: test_checks.py  test_report_and_audit.py  test_scanner.py
