[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "research-leakproof"
version = "0.1.0"
description = "Catch data leakage, inflated sample size, shape-collapse, and over-claimed metrics in any ML or research project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bishal Shrestha" }]
keywords = ["machine-learning", "research", "reproducibility", "data-leakage", "statistics", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/OfficialBishal/research-leakproof"
Source = "https://github.com/OfficialBishal/research-leakproof"

[project.scripts]
research-leakproof = "research_leakproof.cli:main"

[tool.setuptools.packages.find]
include = ["research_leakproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
